# dbus-sensors

./: .clang-tidy  .clang-tidy-ignore  .upstream-base-commit  meson.build  meson.options  meson_options.txt
include/: ADCSensor.hpp  CPUSensor.hpp  ChassisIntrusionSensor.hpp  GPUStatus.hpp  HwmonTempSensor.hpp  IpmbSensor.hpp  IpmbStatus.hpp  MCUTempSensor.hpp  NVMeBasicContext.hpp  NVMeContext.hpp  NVMeMIStatus.hpp  NVMeStatus.hpp  NvmeStatus.hpp  PLXTempSensor.hpp  PSUEvent.hpp  PSURedundancy.hpp  PSUSensor.hpp  ProcessorStatus.hpp  SELSensor.hpp  SatelliteSensor.hpp  TachSensor.hpp  Thresholds.hpp  Utils.hpp  WatchdogSensor.hpp  sharedMemUtils.hpp
nvidia-gpu/utils/: meson.build
nvidia-gpu/utils/gpu-server/: meson.build
nvidia-gpu/utils/gpu-server/client-example/: client.cpp  gpu_client_it_example.csv  meson.build
nvidia-gpu/utils/gpu-server/lib/: .clang-tidy  base.c  gpuserver.h  gpuserver_mctp_discovery.c  mctp.c
nvidia-gpu/utils/gpu-server/mctp-reactor/: mctp_discovery.cpp  mctp_discovery.hpp  mctp_reactor.cpp  meson.build
nvidia-gpu/utils/gpu-server/server/: client_connection.cpp  client_connection.hpp  coroutine.hpp  globals.hpp  handler.hpp  instance_id.hpp  manager.cpp  mctp_endpoint_manager.cpp  request.hpp  request_timeout_tracker.hpp  socket_handler.cpp  socket_manager.hpp  types.hpp
nvidia-gpu/utils/gpu-server/services/: gpuserver-mctp-reactor.service  meson.build
nvidia-gpu/utils/gpu-server/tests/: meson.build  test_base.cpp  test_instance_id.cpp
service_files/: meson.build  xyz.openbmc_project.bootprogress.service  xyz.openbmc_project.discreteleakdetectsensor.service  xyz.openbmc_project.gpustatus.service  xyz.openbmc_project.ipmbstatus.service  xyz.openbmc_project.leakagesensor.service  xyz.openbmc_project.leakdetectsensor.service  xyz.openbmc_project.nvmestatus.service  xyz.openbmc_project.plxtempsensor.service  xyz.openbmc_project.psuredundancy.service  xyz.openbmc_project.satellitesensor.service  xyz.openbmc_project.synthesizedsensor.service  xyz.openbmc_project.writeprotectsensor.service
src/: ADCSensor.cpp  ADCSensor.hpp  ADCSensorMain.cpp  BootProgressSensor.cpp  CPUSensor.cpp  CPUSensorMain.cpp  ChassisIntrusionSensor.cpp  DeviceMgmt.cpp  DeviceMgmt.hpp  DiscreteLeakDetectSensor.cpp  DiscreteLeakDetectSensor.hpp  DiscreteLeakDetectSensorMain.cpp  ExitAirTempSensor.cpp  ExternalSensor.cpp  ExternalSensorMain.cpp  FanMain.cpp  GPIOPresenceSensor.cpp  GPIOPresenceSensor.hpp  GPIOPresenceSensorMain.cpp  GPUStatus.cpp  GPUStatus.hpp  GPUStatusMain.cpp  HwmonTempMain.cpp  HwmonTempSensor.cpp  HwmonTempSensor.hpp  IntelCPUSensorMain.cpp  IntrusionSensorMain.cpp  IpmbSensor.cpp  IpmbSensor.hpp  IpmbStatus.cpp  IpmbStatus.hpp  LeakDetectSensor.cpp  LeakDetectSensor.hpp  LeakDetectSensorMain.cpp  LeakageSensor.cpp  LeakageSensor.hpp  LeakageSensorMain.cpp  LedUtils.hpp  MCUTempSensor.cpp  NVMeBasicContext.cpp  (+46 more)
src/mctp/: MCTPEndpoint.cpp  MCTPEndpoint.hpp  MCTPReactor.cpp  MCTPReactorMain.cpp
src/nvidia-gpu/: meson.build
src/nvidia-gpu/apps/gpu-temperature-sensor/: GpuSensorTask.hpp  GpuTempSensor.hpp  MctpRequester.hpp  README.md
src/nvidia-gpu/lib/: README.md  nvidia_sensors.h
src/nvidia-gpu/utils/gpu-server/: README.md
src/nvidia-gpu/utils/gpu-server/client-example/: gpu_client_it.cpp  meson.build
src/nvidia-gpu/utils/gpu-server/lib/: base.h  gpuserver.c  gpuserver_mctp_discovery.h  instance-id.c  instance-id.h  mctp.h  meson.build
src/nvidia-gpu/utils/gpu-server/server/: gpuserverd.cpp  manager.hpp  mctp_endpoint_manager.hpp  meson.build  request_timeout_tracker.cpp  socket_handler.hpp  utils.cpp  utils.hpp
src/nvidia-gpu/utils/gpu-server/services/: gpuserverd.service
src/nvidia-gpu/utils/gpu-server/tests/: test_utils.cpp
tests/: meson.build  test_MCTPReactor.cpp
