executable(
    'gpu-client-example',
    'client.cpp',
    dependencies: [gpuserver_lib_dep],
    install: true,
    install_dir: get_option('bindir')
)

executable(
    'gpu-client-it',
    'gpu_client_it.cpp',
    dependencies : [gpuserver_lib_dep],
    install: true,
    install_dir: get_option('bindir')
)
